fixed two images overlapping effect

--- a/style.css
+++ b/style.css
@@ -301,6 +301,10 @@ li {
     top: 0;
     z-index: 999;
   }
+
+  .two-img {
+    padding-left: 31%;
+  }
 }
 
 /* =====  End of FOOTER  ====== */
